# metric

./: .clang-format  .gitignore  .gitmodules  404.html  ALGORITHMIC_GAP_ANALYSIS.md  BUILD.md  CAPABILITY_ROADMAP.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  EMBEDDING_AND_MAPPING_ROADMAP.md  ENGINE_IMPLEMENTATION_PLAN.md  FLAGSHIP_DEMOS_PLAN.md  METRIC_ENGINE_PLAN.md  NATIVE_DNN_ENGINE_PLAN.md  PMQTest.cpp  PRODUCTION_READINESS_PLAN.md  PYTHON_USER_EXPERIENCE_PLAN.md  README.md  REPRESENTATION_LAYER_PLAN.md  REVIVAL_PLAN.md  TEST_AND_VALIDATION_PLAN.md  classList.md  framework.cpp  index.html  main.cpp  metric.hpp  search.html  sitemap.xml  test
crossfilter/benchmark/: CMakeLists.txt
crossfilter/test/: CMakeLists.txt  crossfilter_js_iterables.cpp  crossfilter_js_test.cpp
distance/: CMakeLists.txt  README.md  metric_distance.cpp  metric_distance.hpp
distance/details/: EMD.cpp  EMD.hpp  Edit.cpp  TWED.cpp  TWED.hpp
examples/: CMakeLists.txt  Laplacians_test.cpp  Laplacians_test.sln  README.md  SensorExample.cpp  TUTORIAL.md  index.html  sparsification_test.cpp  sparsification_test.h  tests.cpp  tests.h  tutorial.cpp
examples/core/: CMakeLists.txt  custom_metric_space.cpp  explicit_space_representations.cpp  histogram_emd_space.cpp  metric_space_correlation.cpp  metric_space_entropy.cpp  metric_space_intrinsic_dimension.cpp  metric_space_strings.cpp  record_csv_workflow.cpp  representative_selection_space.cpp  space_persistence.cpp  space_user_workflow.cpp  stats_space_profile.cpp  time_series_twed_space.cpp
examples/correlation_examples/: CMakeLists.txt  Correlation_example.cpp  README.md  advanced_example.cpp  correlation_example.cpp  intro_example.cpp  main.cpp  simple_correlation.cpp  simple_example.cpp
examples/distance_examples/: CMakeLists.txt  EMD_example.cpp  EditDistance_example.cpp  SSIM_example.cpp  StandartMetrics_example.cpp  TWED_example.cpp  base_distances_example.cpp  cramervon_mises_distance_example.cpp  distance_example.cpp  earth_mover_distance_2_example.cpp  earth_mover_distance_example.cpp  edit_distance_example.cpp  empty_example.cpp  entropy_convergence_check.cpp  entropy_example.cpp  entropy_from_csv_example.cpp  entropy_kpn_example.cpp  entropy_mnist_example.cpp  entropy_mnist_riemannian_example.cpp  epmgp_example.cpp  kohonen_distance_example.cpp  kohonen_distance_example_2.cpp  kohonen_distance_tests.cpp  kolmogorov_smirnov_distance_example.cpp  kolmogorov_smirnov_ditance_example.cpp  random_emd_example.cpp  sorensen_distance_example.cpp  standard_distances_example.cpp  standards_benchmark.cpp  standart_distances_example.cpp  structural_similarity_example.cpp  structural_similartiy_example.cpp  time_warp_elastic_distance_example.cpp
examples/dnn_examples/: CMakeLists.txt  base.cpp  dnn_example.cpp  dnn_example_classification.cpp  dnn_example_pgm.cpp
examples/energies_examples/: CMakeLists.txt  anomalies_detection_example.cpp  anomalies_example.cpp  anomalies_example_1.cpp  energies_example.cpp  energies_split.cpp
examples/engine/: CMakeLists.txt  benchmark_report.cpp  condition_monitoring.cpp  condition_monitoring_visual_export.cpp  cross_space_dependency.cpp  cross_space_dependency.hpp  cross_space_dependency_visual_export.cpp  cross_space_mgc.cpp  distribution_image_recoding.cpp  finite_metric_dynamics.cpp  finite_metric_dynamics_fixture.hpp  finite_metric_dynamics_visual_export.cpp  hero_application_benchmarks.cpp  histogram_transport_space.cpp  mapping_dimensionality_visual_export.cpp  metric_space_mapping_pipeline.cpp  mixed_finite_records.cpp  mixed_finite_records.hpp  mixed_finite_records_fixture.hpp  mixed_finite_records_visual_export.cpp  mixed_structured_records.cpp  mnist_diffusion_coordinate_gallery.cpp  mnist_diffusion_coordinate_smoke.cpp  mnist_grae10_integrity.cpp  mnist_phate_autoencoder_gallery.cpp  mnist_phate_autoencoder_smoke.cpp  modify_space_components.cpp  parametric_diffusion_coordinate_map.cpp  parametric_diffusion_coordinate_pipeline_builder.cpp  phate_autoencoder_map.cpp  phate_pipeline_builder.cpp  process_curve_diffusion_coordinate_gallery.cpp  process_curve_diffusion_coordinate_map.cpp  process_curve_external_gallery.cpp  process_curve_external_visual_export.cpp  process_curve_phate_gallery.cpp  process_curve_phate_map.cpp  process_curves_space.cpp  redif_metric_dynamics_visual_export.cpp  relation_matrix_visual_export.cpp  (+4 more)
examples/ensemble_examples/: Bagging_example.cpp  Boosting_example.cpp  CMakeLists.txt  CWA_demo.cpp  CWA_example.cpp  MetricDecisionTree_example.cpp  MetricDesicionTree_example.cpp  README.md  helpers.cpp
examples/graph_pyhton_assets/: margulis.py
examples/infinity_tree_example/: CMakeLists.txt  infinity_tree_example.cpp
examples/laplacians_example/: CMakeLists.txt  Laplacians_test.cpp  Laplacians_test.sln  README.md  sparsification_test.cpp  sparsification_test.h  tests.cpp  tests.h
examples/mapping_examples/: CMakeLists.txt  KOC_MNIST_example.cpp  PCFA_example.cpp  README.md  auto_detect_metric_example.cpp  kohonen_outliers_clustering_example.cpp  kohonen_outliers_clustering_tests.cpp  main_dwt_reducer.cpp  main_encoder.cpp  main_esn.cpp  main_grooves_PCA.cpp  reverse_diffusion_example.cpp
examples/sensor_example/: CMakeLists.txt  SensorExample.cpp  ThreadPool.cpp  ThreadPool.h
examples/sensor_examples/: CMakeLists.txt  db_creditinals.csv  sensor_example.cpp
examples/space_examples/: CMakeLists.txt  advanced_example.cpp  blaze_threaded_insert.cpp  clustering_example.cpp  eigen_example.cpp  fuzzy_test.cpp  graph_example.cpp  knn_graph_example.cpp  knn_graph_test.cpp  search_and_access_example.cpp  simple_example.cpp  space_tree_advanced_example.cpp  space_tree_simple_example.cpp
examples/templates/: CMakeLists.txt  cross_space_dependency.cpp  derived_coordinate_space.cpp  histogram_transport.cpp  mixed_records.cpp  representative_reduction.cpp  time_series_condition_monitoring.cpp
python/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  cmake_ext.py  metric.py  pyproject.toml  setup.py  simple_example.py
tests/: CMakeLists.txt  README.md
(+4058 files in other folders)
