add_subdirectory(correlation_examples)
add_subdirectory(energies_examples)
add_subdirectory(distance_examples)
add_subdirectory(dnn_examples)
add_subdirectory(ensemble_examples)
#add_subdirectory(graph_pyhton_assets)
add_subdirectory(laplacians_example)
add_subdirectory(mapping_examples)
#add_subdirectory(space_examples)
add_subdirectory(transform_examples)
